# pi05-alpasim-stage1

./: '+$scriptPath+'  .gitattributes  .gitignore  README.md  architecture.md  compile_capture_to_sim.py  dedupe_pyproject_line.py  fix_pyproject_line.py  main.py  patch_gaussian_model.py  pick_and_place.py  render_gaussians.py  requirements.txt  run_sam2_masks.py  scene_graph_local_test.json  stage1_render_and_mask.py  stage2_gaussian_grouping.py  stage5_build_mujoco_scene.py  test_e2e_autonomous.py  tmp_carla_visible_test.py  tmp_launch_visible.sh  todo.md
.venv311/: pyvenv.cfg
alpasim_outputs/: ALPASIM_A15_MISSION_HANDOFF_2026-03-23.md  a15_metrics_results.txt  a15_mission_metrics_results.txt  apply_a15_patch.py  apply_a15_patch_2.py
alpasim_pi05_driver/: pyproject.toml
alpasim_pi05_driver/alpasim_pi05_driver/: __init__.py  pi05_stage0_model.py
alpasim_pi05_driver/configs/: stage0_local_external_driver.yaml  stage0_pi05.yaml
artifacts/: scene_sparse_pointcloud.xml
cognitive/: __init__.py  local_vlm.py  vlm_executor.py
docs/: README.md  av_complete_stack.md  av_driving_stack.md  av_mvp_runbook.md  av_openpilot_style_implementation_plan.md  carla_mission_e2e_run_20260327.md  carla_working_stack.md  fundable_truck_av_stack.md  groq_semantic_runtime.md  openpilot_metadrive_official_runbook.md  openpilot_scenarionet_ab_runbook.md  openpilot_scenarionet_debug_checklist.md  pi05_alpasim_stage0_full_paper.md  pi05_alpasim_stage0_public_report.md  pi05_alpasim_stage0_publish_checklist.md  pi05_alpasim_stage0_rerun_plan.md  pi05_alpasim_stage0_social_post.md  (+1 more)
(+164 files in other folders)
